# chaos

./: .gitignore  Izhikevich.py  README.md  SNN.py  SNN_torch.py  TSN_enhanced_plot.py  TSN_sim.py  git_cleanup_guide.sh  izhikevich_ISI.csv  izhikevich_ISI_RS.csv  izhikevich_ISI_chaos.csv  main.py  mnist-mlp.py  printISI.py  pyproject.toml  quine.py  test.ipynb  train_compare.py  waveforms_v_ap.csv  waveforms_v_currentin.csv  waveforms_v_u.csv
